--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css-react": "^1.0.0",
+    "axios": "^0.19.2",
     "install": "^0.13.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.13.1",
@@ -20,7 +22,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sinon": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "http://asickweb.com/book-store/",
   "eslintConfig": {
     "extends": "react-app"
   },
